reproducing the previous person's results.

--- a/core/bicep_model/2.sklearn.ipynb
+++ b/core/bicep_model/2.sklearn.ipynb
@@ -2,20 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "objc[49355]: Class CaptureDelegate is implemented in both /Users/fuixlabsdev1/Programming/PP/graduation-thesis/env/lib/python3.8/site-packages/mediapipe/.dylibs/libopencv_videoio.3.4.16.dylib (0x108688860) and /Users/fuixlabsdev1/Programming/PP/graduation-thesis/env/lib/python3.8/site-packages/cv2/cv2.abi3.so (0x160ece480). One of the two will be used. Which one is undefined.\n",
-      "objc[49355]: Class CVWindow is implemented in both /Users/fuixlabsdev1/Programming/PP/graduation-thesis/env/lib/python3.8/site-packages/mediapipe/.dylibs/libopencv_highgui.3.4.16.dylib (0x103440a68) and /Users/fuixlabsdev1/Programming/PP/graduation-thesis/env/lib/python3.8/site-packages/cv2/cv2.abi3.so (0x160ece4d0). One of the two will be used. Which one is undefined.\n",
-      "objc[49355]: Class CVView is implemented in both /Users/fuixlabsdev1/Programming/PP/graduation-thesis/env/lib/python3.8/site-packages/mediapipe/.dylibs/libopencv_highgui.3.4.16.dylib (0x103440a90) and /Users/fuixlabsdev1/Programming/PP/graduation-thesis/env/lib/python3.8/site-packages/cv2/cv2.abi3.so (0x160ece4f8). One of the two will be used. Which one is undefined.\n",
-      "objc[49355]: Class CVSlider is implemented in both /Users/fuixlabsdev1/Programming/PP/graduation-thesis/env/lib/python3.8/site-packages/mediapipe/.dylibs/libopencv_highgui.3.4.16.dylib (0x103440ab8) and /Users/fuixlabsdev1/Programming/PP/graduation-thesis/env/lib/python3.8/site-packages/cv2/cv2.abi3.so (0x160ece520). One of the two will be used. Which one is undefined.\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-11T23:31:43.678513Z",
+     "start_time": "2024-09-11T23:31:43.151625Z"
     }
-   ],
+   },
    "source": [
     "import mediapipe as mp\n",
     "import cv2\n",
@@ -39,7 +31,20 @@
     "# Drawing helpers\n",
     "mp_drawing = mp.solutions.drawing_utils\n",
     "mp_pose = mp.solutions.pose"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "objc[93690]: Class CaptureDelegate is implemented in both /Users/jainilpatel/PycharmProjects/Exercise-Correction/.venv/lib/python3.9/site-packages/mediapipe/.dylibs/libopencv_videoio.3.4.16.dylib (0x304108860) and /Users/jainilpatel/PycharmProjects/Exercise-Correction/.venv/lib/python3.9/site-packages/cv2/cv2.abi3.so (0x3264ea480). One of the two will be used. Which one is undefined.\n",
+      "objc[93690]: Class CVWindow is implemented in both /Users/jainilpatel/PycharmProjects/Exercise-Correction/.venv/lib/python3.9/site-packages/mediapipe/.dylibs/libopencv_highgui.3.4.16.dylib (0x17f4f0a68) and /Users/jainilpatel/PycharmProjects/Exercise-Correction/.venv/lib/python3.9/site-packages/cv2/cv2.abi3.so (0x3264ea4d0). One of the two will be used. Which one is undefined.\n",
+      "objc[93690]: Class CVView is implemented in both /Users/jainilpatel/PycharmProjects/Exercise-Correction/.venv/lib/python3.9/site-packages/mediapipe/.dylibs/libopencv_highgui.3.4.16.dylib (0x17f4f0a90) and /Users/jainilpatel/PycharmProjects/Exercise-Correction/.venv/lib/python3.9/site-packages/cv2/cv2.abi3.so (0x3264ea4f8). One of the two will be used. Which one is undefined.\n",
+      "objc[93690]: Class CVSlider is implemented in both /Users/jainilpatel/PycharmProjects/Exercise-Correction/.venv/lib/python3.9/site-packages/mediapipe/.dylibs/libopencv_highgui.3.4.16.dylib (0x17f4f0ab8) and /Users/jainilpatel/PycharmProjects/Exercise-Correction/.venv/lib/python3.9/site-packages/cv2/cv2.abi3.so (0x3264ea520). One of the two will be used. Which one is undefined.\n"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -57,9 +62,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-11T23:31:48.768165Z",
+     "start_time": "2024-09-11T23:31:48.762280Z"
+    }
+   },
    "source": [
     "def rescale_frame(frame, percent=50):\n",
     "    '''\n",
@@ -91,12 +99,26 @@
     "def round_up_metric_results(results) -> list:\n",
     "    '''Round up metrics results such as precision score, recall score, ...'''\n",
     "    return list(map(lambda el: round(el, 3), results))"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-11T23:31:50.328752Z",
+     "start_time": "2024-09-11T23:31:50.236819Z"
+    }
+   },
+   "source": [
+    "# load dataset\n",
+    "df = describe_dataset(\"./train.csv\")\n",
+    "\n",
+    "# Categorizing label\n",
+    "df.loc[df[\"label\"] == \"C\", \"label\"] = 0\n",
+    "df.loc[df[\"label\"] == \"L\", \"label\"] = 1"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -117,51 +139,79 @@
      ]
     }
    ],
-   "source": [
-    "# load dataset\n",
-    "df = describe_dataset(\"./train.csv\")\n",
-    "\n",
-    "# Categorizing label\n",
-    "df.loc[df[\"label\"] == \"C\", \"label\"] = 0\n",
-    "df.loc[df[\"label\"] == \"L\", \"label\"] = 1"
-   ]
+   "execution_count": 3
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-11T23:31:59.875709Z",
+     "start_time": "2024-09-11T23:31:59.872174Z"
+    }
+   },
    "source": [
     "sc = StandardScaler()"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-11T23:32:29.745505Z",
+     "start_time": "2024-09-11T23:32:29.743814Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "# applying the standard scalar to the csv file",
+   "outputs": [],
+   "execution_count": 7
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-11T23:32:30.314299Z",
+     "start_time": "2024-09-11T23:32:30.312015Z"
+    }
+   },
    "source": [
     "with open(\"./model/input_scaler.pkl\", \"rb\") as f:\n",
     "    sc = pickle.load(f)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 8
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-11T23:32:30.874792Z",
+     "start_time": "2024-09-11T23:32:30.869637Z"
+    }
+   },
    "source": [
     "# Standard Scaling of features\n",
     "x = df.drop(\"label\", axis = 1)\n",
     "x = pd.DataFrame(sc.transform(x))\n",
     "\n",
     "y = df[\"label\"].astype('int')"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 9
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-11T23:32:42.997088Z",
+     "start_time": "2024-09-11T23:32:42.991835Z"
+    }
+   },
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=1234)\n",
+    "y_train.head()"
+   ],
    "outputs": [
     {
      "data": {
@@ -171,24 +221,15 @@
        "6190     0\n",
        "7645     0\n",
        "13890    1\n",
-       "        ..\n",
-       "11468    1\n",
-       "7221     1\n",
-       "1318     1\n",
-       "8915     1\n",
-       "11055    1\n",
-       "Name: label, Length: 12297, dtype: int64"
+       "Name: label, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=1234)\n",
-    "y_train"
-   ]
+   "execution_count": 11
   },
   {
    "cell_type": "markdown",
@@ -199,11 +240,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-11T23:32:54.304148Z",
+     "start_time": "2024-09-11T23:32:49.379621Z"
+    }
+   },
+   "source": [
+    "algorithms =[(\"LR\", LogisticRegression()),\n",
+    "         (\"SVC\", SVC(probability=True)),\n",
+    "         ('KNN',KNeighborsClassifier()),\n",
+    "         (\"DTC\", DecisionTreeClassifier()),\n",
+    "         (\"SGDC\", CalibratedClassifierCV(SGDClassifier())),\n",
+    "         (\"NB\", GaussianNB()),\n",
+    "         ('RF', RandomForestClassifier()),]\n",
+    "\n",
+    "models = {}\n",
+    "final_results = []\n",
+    "\n",
+    "for name, model in algorithms:\n",
+    "    trained_model = model.fit(X_train, y_train)\n",
+    "    models[name] = trained_model\n",
+    "\n",
+    "    # Evaluate model\n",
+    "    model_results = model.predict(X_test)\n",
+    "\n",
+    "    p_score = precision_score(y_test, model_results, average=None, labels=[0, 1])\n",
+    "    a_score = accuracy_score(y_test, model_results)\n",
+    "    r_score = recall_score(y_test, model_results, average=None, labels=[0, 1])\n",
+    "    f1_score_result = f1_score(y_test, model_results, average=None, labels=[0, 1])\n",
+    "    cm = confusion_matrix(y_test, model_results, labels=[0, 1])\n",
+    "    final_results.append(( name,  round_up_metric_results(p_score), a_score, round_up_metric_results(r_score), round_up_metric_results(f1_score_result), cm))\n",
+    "\n",
+    "# Sort results by F1 score\n",
+    "final_results.sort(key=lambda k: sum(k[4]), reverse=True)\n",
+    "pd.DataFrame(final_results, columns=[\"Model\", \"Precision Score\", \"Accuracy score\", \"Recall Score\", \"F1 score\", \"Confusion Matrix\"])"
+   ],
    "outputs": [
     {
      "data": {
+      "text/plain": [
+       "  Model Precision Score  Accuracy score    Recall Score        F1 score  \\\n",
+       "0    RF  [0.999, 0.998]        0.998374  [0.998, 0.999]  [0.999, 0.998]   \n",
+       "1   KNN  [0.997, 0.999]        0.998049  [0.999, 0.996]  [0.998, 0.998]   \n",
+       "2   SVC  [0.997, 0.995]        0.996098  [0.996, 0.996]  [0.996, 0.996]   \n",
+       "3   DTC  [0.996, 0.989]        0.992846  [0.991, 0.995]  [0.993, 0.992]   \n",
+       "4    LR  [0.986, 0.975]        0.980813  [0.979, 0.983]  [0.982, 0.979]   \n",
+       "5  SGDC  [0.982, 0.978]        0.980163  [0.982, 0.979]  [0.982, 0.978]   \n",
+       "6    NB  [0.927, 0.842]        0.884878  [0.857, 0.918]   [0.89, 0.879]   \n",
+       "\n",
+       "             Confusion Matrix  \n",
+       "0      [[1676, 3], [2, 1394]]  \n",
+       "1      [[1678, 1], [5, 1391]]  \n",
+       "2      [[1672, 7], [5, 1391]]  \n",
+       "3     [[1664, 15], [7, 1389]]  \n",
+       "4    [[1644, 35], [24, 1372]]  \n",
+       "5    [[1648, 31], [30, 1366]]  \n",
+       "6  [[1439, 240], [114, 1282]]  "
+      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -235,11 +329,11 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>RF</td>\n",
-       "      <td>[0.999, 0.999]</td>\n",
-       "      <td>0.999024</td>\n",
-       "      <td>[0.999, 0.999]</td>\n",
-       "      <td>[0.999, 0.999]</td>\n",
-       "      <td>[[1677, 2], [1, 1395]]</td>\n",
+       "      <td>[0.999, 0.998]</td>\n",
+       "      <td>0.998374</td>\n",
+       "      <td>[0.998, 0.999]</td>\n",
+       "      <td>[0.999, 0.998]</td>\n",
+       "      <td>[[1676, 3], [2, 1394]]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -262,29 +356,29 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>DTC</td>\n",
-       "      <td>[0.997, 0.991]</td>\n",
-       "      <td>0.994146</td>\n",
-       "      <td>[0.992, 0.996]</td>\n",
-       "      <td>[0.995, 0.994]</td>\n",
-       "      <td>[[1666, 13], [5, 1391]]</td>\n",
+       "      <td>[0.996, 0.989]</td>\n",
+       "      <td>0.992846</td>\n",
+       "      <td>[0.991, 0.995]</td>\n",
+       "      <td>[0.993, 0.992]</td>\n",
+       "      <td>[[1664, 15], [7, 1389]]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>SGDC</td>\n",
-       "      <td>[0.987, 0.974]</td>\n",
-       "      <td>0.981463</td>\n",
-       "      <td>[0.979, 0.985]</td>\n",
-       "      <td>[0.983, 0.98]</td>\n",
-       "      <td>[[1643, 36], [21, 1375]]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
        "      <td>LR</td>\n",
        "      <td>[0.986, 0.975]</td>\n",
        "      <td>0.980813</td>\n",
        "      <td>[0.979, 0.983]</td>\n",
        "      <td>[0.982, 0.979]</td>\n",
        "      <td>[[1644, 35], [24, 1372]]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>SGDC</td>\n",
+       "      <td>[0.982, 0.978]</td>\n",
+       "      <td>0.980163</td>\n",
+       "      <td>[0.982, 0.979]</td>\n",
+       "      <td>[0.982, 0.978]</td>\n",
+       "      <td>[[1648, 31], [30, 1366]]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -298,62 +392,14 @@
        "  </tbody>\n",
        "</table>\n",
        "</div>"
-      ],
-      "text/plain": [
-       "  Model Precision Score  Accuracy score    Recall Score        F1 score  \\\n",
-       "0    RF  [0.999, 0.999]        0.999024  [0.999, 0.999]  [0.999, 0.999]   \n",
-       "1   KNN  [0.997, 0.999]        0.998049  [0.999, 0.996]  [0.998, 0.998]   \n",
-       "2   SVC  [0.997, 0.995]        0.996098  [0.996, 0.996]  [0.996, 0.996]   \n",
-       "3   DTC  [0.997, 0.991]        0.994146  [0.992, 0.996]  [0.995, 0.994]   \n",
-       "4  SGDC  [0.987, 0.974]        0.981463  [0.979, 0.985]   [0.983, 0.98]   \n",
-       "5    LR  [0.986, 0.975]        0.980813  [0.979, 0.983]  [0.982, 0.979]   \n",
-       "6    NB  [0.927, 0.842]        0.884878  [0.857, 0.918]   [0.89, 0.879]   \n",
-       "\n",
-       "             Confusion Matrix  \n",
-       "0      [[1677, 2], [1, 1395]]  \n",
-       "1      [[1678, 1], [5, 1391]]  \n",
-       "2      [[1672, 7], [5, 1391]]  \n",
-       "3     [[1666, 13], [5, 1391]]  \n",
-       "4    [[1643, 36], [21, 1375]]  \n",
-       "5    [[1644, 35], [24, 1372]]  \n",
-       "6  [[1439, 240], [114, 1282]]  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "algorithms =[(\"LR\", LogisticRegression()),\n",
-    "         (\"SVC\", SVC(probability=True)),\n",
-    "         ('KNN',KNeighborsClassifier()),\n",
-    "         (\"DTC\", DecisionTreeClassifier()),\n",
-    "         (\"SGDC\", CalibratedClassifierCV(SGDClassifier())),\n",
-    "         (\"NB\", GaussianNB()),\n",
-    "         ('RF', RandomForestClassifier()),]\n",
-    "\n",
-    "models = {}\n",
-    "final_results = []\n",
-    "\n",
-    "for name, model in algorithms:\n",
-    "    trained_model = model.fit(X_train, y_train)\n",
-    "    models[name] = trained_model\n",
-    "\n",
-    "    # Evaluate model\n",
-    "    model_results = model.predict(X_test)\n",
-    "\n",
-    "    p_score = precision_score(y_test, model_results, average=None, labels=[0, 1])\n",
-    "    a_score = accuracy_score(y_test, model_results)\n",
-    "    r_score = recall_score(y_test, model_results, average=None, labels=[0, 1])\n",
-    "    f1_score_result = f1_score(y_test, model_results, average=None, labels=[0, 1])\n",
-    "    cm = confusion_matrix(y_test, model_results, labels=[0, 1])\n",
-    "    final_results.append(( name,  round_up_metric_results(p_score), a_score, round_up_metric_results(r_score), round_up_metric_results(f1_score_result), cm))\n",
-    "\n",
-    "# Sort results by F1 score\n",
-    "final_results.sort(key=lambda k: sum(k[4]), reverse=True)\n",
-    "pd.DataFrame(final_results, columns=[\"Model\", \"Precision Score\", \"Accuracy score\", \"Recall Score\", \"F1 score\", \"Confusion Matrix\"])"
-   ]
+   "execution_count": 12
   },
   {
    "cell_type": "markdown",
@@ -363,24 +409,51 @@
    ]
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-11T23:34:56.580287Z",
+     "start_time": "2024-09-11T23:34:56.577691Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# sklearn is just used to see whether the classification can be done easily by simple model or not. \n",
+    "# Instead of using the LSTM if the classification is done by simpler model, than we can directly use the simple model. "
+   ],
+   "outputs": [],
+   "execution_count": 14
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"./model/all_sklearn.pkl\", \"wb\") as f:\n",
+    "with open(\"./model/all_sklearn_jainil.pkl\", \"wb\") as f:\n",
     "    pickle.dump(models, f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-11T23:33:15.539950Z",
+     "start_time": "2024-09-11T23:33:15.537879Z"
+    }
+   },
    "source": [
-    "with open(\"./model/input_scaler.pkl\", \"wb\") as f:\n",
+    "with open(\"./model/input_scaler_jainil.pkl\", \"wb\") as f:\n",
     "    pickle.dump(sc, f)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 13
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": ""
   }
  ],
  "metadata": {
