--- a/core/bicep_model/5.detection.ipynb
+++ b/core/bicep_model/5.detection.ipynb
@@ -2,20 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "objc[80643]: Class CaptureDelegate is implemented in both /Users/fuixlabsdev1/Programming/PP/graduation-thesis/env/lib/python3.8/site-packages/mediapipe/.dylibs/libopencv_videoio.3.4.16.dylib (0x108bc8860) and /Users/fuixlabsdev1/Programming/PP/graduation-thesis/env/lib/python3.8/site-packages/cv2/cv2.abi3.so (0x15d902480). One of the two will be used. Which one is undefined.\n",
-      "objc[80643]: Class CVWindow is implemented in both /Users/fuixlabsdev1/Programming/PP/graduation-thesis/env/lib/python3.8/site-packages/mediapipe/.dylibs/libopencv_highgui.3.4.16.dylib (0x1081d0a68) and /Users/fuixlabsdev1/Programming/PP/graduation-thesis/env/lib/python3.8/site-packages/cv2/cv2.abi3.so (0x15d9024d0). One of the two will be used. Which one is undefined.\n",
-      "objc[80643]: Class CVView is implemented in both /Users/fuixlabsdev1/Programming/PP/graduation-thesis/env/lib/python3.8/site-packages/mediapipe/.dylibs/libopencv_highgui.3.4.16.dylib (0x1081d0a90) and /Users/fuixlabsdev1/Programming/PP/graduation-thesis/env/lib/python3.8/site-packages/cv2/cv2.abi3.so (0x15d9024f8). One of the two will be used. Which one is undefined.\n",
-      "objc[80643]: Class CVSlider is implemented in both /Users/fuixlabsdev1/Programming/PP/graduation-thesis/env/lib/python3.8/site-packages/mediapipe/.dylibs/libopencv_highgui.3.4.16.dylib (0x1081d0ab8) and /Users/fuixlabsdev1/Programming/PP/graduation-thesis/env/lib/python3.8/site-packages/cv2/cv2.abi3.so (0x15d902520). One of the two will be used. Which one is undefined.\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-11T23:56:20.735041Z",
+     "start_time": "2024-09-11T23:56:20.571355Z"
     }
-   ],
+   },
    "source": [
     "import mediapipe as mp\n",
     "import cv2\n",
@@ -31,7 +23,20 @@
     "# Drawing helpers\n",
     "mp_drawing = mp.solutions.drawing_utils\n",
     "mp_pose = mp.solutions.pose\n"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "objc[98080]: Class CaptureDelegate is implemented in both /Users/jainilpatel/PycharmProjects/Exercise-Correction/.venv/lib/python3.9/site-packages/mediapipe/.dylibs/libopencv_videoio.3.4.16.dylib (0x13fc14860) and /Users/jainilpatel/PycharmProjects/Exercise-Correction/.venv/lib/python3.9/site-packages/cv2/cv2.abi3.so (0x33c186480). One of the two will be used. Which one is undefined.\n",
+      "objc[98080]: Class CVWindow is implemented in both /Users/jainilpatel/PycharmProjects/Exercise-Correction/.venv/lib/python3.9/site-packages/mediapipe/.dylibs/libopencv_highgui.3.4.16.dylib (0x13f910a68) and /Users/jainilpatel/PycharmProjects/Exercise-Correction/.venv/lib/python3.9/site-packages/cv2/cv2.abi3.so (0x33c1864d0). One of the two will be used. Which one is undefined.\n",
+      "objc[98080]: Class CVView is implemented in both /Users/jainilpatel/PycharmProjects/Exercise-Correction/.venv/lib/python3.9/site-packages/mediapipe/.dylibs/libopencv_highgui.3.4.16.dylib (0x13f910a90) and /Users/jainilpatel/PycharmProjects/Exercise-Correction/.venv/lib/python3.9/site-packages/cv2/cv2.abi3.so (0x33c1864f8). One of the two will be used. Which one is undefined.\n",
+      "objc[98080]: Class CVSlider is implemented in both /Users/jainilpatel/PycharmProjects/Exercise-Correction/.venv/lib/python3.9/site-packages/mediapipe/.dylibs/libopencv_highgui.3.4.16.dylib (0x13f910ab8) and /Users/jainilpatel/PycharmProjects/Exercise-Correction/.venv/lib/python3.9/site-packages/cv2/cv2.abi3.so (0x33c186520). One of the two will be used. Which one is undefined.\n"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -42,9 +47,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-11T23:56:21.788237Z",
+     "start_time": "2024-09-11T23:56:21.785133Z"
+    }
+   },
    "source": [
     "# Determine important landmarks for plank\n",
     "IMPORTANT_LMS = [\n",
@@ -65,13 +73,18 @@
     "\n",
     "for lm in IMPORTANT_LMS:\n",
     "    HEADERS += [f\"{lm.lower()}_x\", f\"{lm.lower()}_y\", f\"{lm.lower()}_z\", f\"{lm.lower()}_v\"]"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-11T23:56:22.602728Z",
+     "start_time": "2024-09-11T23:56:22.594484Z"
+    }
+   },
    "source": [
     "def rescale_frame(frame, percent=50):\n",
     "    '''\n",
@@ -125,7 +138,9 @@
     "        data.append([keypoint.x, keypoint.y, keypoint.z, keypoint.visibility])\n",
     "    \n",
     "    return np.array(data).flatten().tolist()\n"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -140,9 +155,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-11T23:56:24.644893Z",
+     "start_time": "2024-09-11T23:56:24.631719Z"
+    }
+   },
    "source": [
     "class BicepPoseAnalysis:\n",
     "    def __init__(self, side: str, stage_down_threshold: float, stage_up_threshold: float, peak_contraction_threshold: float, loose_upper_arm_angle_threshold: float, visibility_threshold: float):\n",
@@ -241,7 +259,9 @@
     "            self.peak_contraction_frame = None\n",
     "        \n",
     "        return (bicep_curl_angle, ground_upper_arm_angle)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -252,27 +272,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-11T23:56:28.781802Z",
+     "start_time": "2024-09-11T23:56:28.778569Z"
+    }
+   },
    "source": [
     "# VIDEO_PATH1 = \"../data/db_curl/bc_test_1.mp4\"\n",
     "# VIDEO_PATH2 = \"../data/db_curl/bc_test_2.mp4\"\n",
     "# VIDEO_PATH3 = \"../data/db_curl/bc_test_3.mp4\"\n",
     "\n",
     "VIDEO_DEMO_PATH = \"../../demo/bc_demo.mp4\""
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 5
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-11T23:56:29.581783Z",
+     "start_time": "2024-09-11T23:56:29.531326Z"
+    }
+   },
    "source": [
     "# Load input scaler\n",
     "with open(\"./model/input_scaler.pkl\", \"rb\") as f:\n",
     "    input_scaler = pickle.load(f)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -283,28 +313,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-11T23:56:31.868509Z",
+     "start_time": "2024-09-11T23:56:31.794233Z"
+    }
+   },
    "source": [
     "# Load model\n",
     "with open(\"./model/KNN_model.pkl\", \"rb\") as f:\n",
     "    sklearn_model = pickle.load(f)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 7
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO: Created TensorFlow Lite XNNPACK delegate for CPU.\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-11T23:56:58.589939Z",
+     "start_time": "2024-09-11T23:56:33.378555Z"
     }
-   ],
+   },
    "source": [
     "cap = cv2.VideoCapture(VIDEO_DEMO_PATH)\n",
     "\n",
@@ -442,7 +472,17 @@
     "    for i in range (1, 5):\n",
     "        cv2.waitKey(1)\n",
     "  \n"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO: Created TensorFlow Lite XNNPACK delegate for CPU.\n"
+     ]
+    }
+   ],
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
