reproducing the previous person's results about the lunges model.

--- a/core/lunge_model/9.err.detection.ipynb
+++ b/core/lunge_model/9.err.detection.ipynb
@@ -2,20 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "objc[80386]: Class CaptureDelegate is implemented in both /Users/fuixlabsdev1/Programming/PP/graduation-thesis/env/lib/python3.8/site-packages/mediapipe/.dylibs/libopencv_videoio.3.4.16.dylib (0x1042c8860) and /Users/fuixlabsdev1/Programming/PP/graduation-thesis/env/lib/python3.8/site-packages/cv2/cv2.abi3.so (0x159902480). One of the two will be used. Which one is undefined.\n",
-      "objc[80386]: Class CVWindow is implemented in both /Users/fuixlabsdev1/Programming/PP/graduation-thesis/env/lib/python3.8/site-packages/mediapipe/.dylibs/libopencv_highgui.3.4.16.dylib (0x103ad0a68) and /Users/fuixlabsdev1/Programming/PP/graduation-thesis/env/lib/python3.8/site-packages/cv2/cv2.abi3.so (0x1599024d0). One of the two will be used. Which one is undefined.\n",
-      "objc[80386]: Class CVView is implemented in both /Users/fuixlabsdev1/Programming/PP/graduation-thesis/env/lib/python3.8/site-packages/mediapipe/.dylibs/libopencv_highgui.3.4.16.dylib (0x103ad0a90) and /Users/fuixlabsdev1/Programming/PP/graduation-thesis/env/lib/python3.8/site-packages/cv2/cv2.abi3.so (0x1599024f8). One of the two will be used. Which one is undefined.\n",
-      "objc[80386]: Class CVSlider is implemented in both /Users/fuixlabsdev1/Programming/PP/graduation-thesis/env/lib/python3.8/site-packages/mediapipe/.dylibs/libopencv_highgui.3.4.16.dylib (0x103ad0ab8) and /Users/fuixlabsdev1/Programming/PP/graduation-thesis/env/lib/python3.8/site-packages/cv2/cv2.abi3.so (0x159902520). One of the two will be used. Which one is undefined.\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-12T03:36:49.945677Z",
+     "start_time": "2024-09-12T03:36:49.779500Z"
     }
-   ],
+   },
    "source": [
     "import mediapipe as mp\n",
     "import cv2\n",
@@ -30,7 +22,20 @@
     "# Drawing helpers\n",
     "mp_drawing = mp.solutions.drawing_utils\n",
     "mp_pose = mp.solutions.pose"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "objc[41149]: Class CaptureDelegate is implemented in both /Users/jainilpatel/PycharmProjects/Exercise-Correction/.venv/lib/python3.9/site-packages/mediapipe/.dylibs/libopencv_videoio.3.4.16.dylib (0x13d1dc860) and /Users/jainilpatel/PycharmProjects/Exercise-Correction/.venv/lib/python3.9/site-packages/cv2/cv2.abi3.so (0x33e60e480). One of the two will be used. Which one is undefined.\n",
+      "objc[41149]: Class CVWindow is implemented in both /Users/jainilpatel/PycharmProjects/Exercise-Correction/.venv/lib/python3.9/site-packages/mediapipe/.dylibs/libopencv_highgui.3.4.16.dylib (0x13cf24a68) and /Users/jainilpatel/PycharmProjects/Exercise-Correction/.venv/lib/python3.9/site-packages/cv2/cv2.abi3.so (0x33e60e4d0). One of the two will be used. Which one is undefined.\n",
+      "objc[41149]: Class CVView is implemented in both /Users/jainilpatel/PycharmProjects/Exercise-Correction/.venv/lib/python3.9/site-packages/mediapipe/.dylibs/libopencv_highgui.3.4.16.dylib (0x13cf24a90) and /Users/jainilpatel/PycharmProjects/Exercise-Correction/.venv/lib/python3.9/site-packages/cv2/cv2.abi3.so (0x33e60e4f8). One of the two will be used. Which one is undefined.\n",
+      "objc[41149]: Class CVSlider is implemented in both /Users/jainilpatel/PycharmProjects/Exercise-Correction/.venv/lib/python3.9/site-packages/mediapipe/.dylibs/libopencv_highgui.3.4.16.dylib (0x13cf24ab8) and /Users/jainilpatel/PycharmProjects/Exercise-Correction/.venv/lib/python3.9/site-packages/cv2/cv2.abi3.so (0x33e60e520). One of the two will be used. Which one is undefined.\n"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -41,9 +46,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-12T03:36:51.069507Z",
+     "start_time": "2024-09-12T03:36:51.065847Z"
+    }
+   },
    "source": [
     "# Determine important landmarks for lunge\n",
     "IMPORTANT_LMS = [\n",
@@ -69,13 +77,18 @@
     "for lm in IMPORTANT_LMS:\n",
     "    HEADERS += [f\"{lm.lower()}_x\", f\"{lm.lower()}_y\", f\"{lm.lower()}_z\", f\"{lm.lower()}_v\"]\n",
     "    "
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-12T03:36:51.520053Z",
+     "start_time": "2024-09-12T03:36:51.509086Z"
+    }
+   },
    "source": [
     "def extract_important_keypoints(results) -> list:\n",
     "    '''\n",
@@ -251,7 +264,9 @@
     "        )\n",
     "\n",
     "    return results"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -262,24 +277,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-12T03:37:29.204826Z",
+     "start_time": "2024-09-12T03:37:29.203080Z"
+    }
+   },
    "source": [
     "# VIDEO_PATH1 = \"../data/lunge/lunge_test_3.mp4\"\n",
     "# VIDEO_PATH2 = \"../data/lunge/lunge_test_5.mp4\"\n",
-    "VIDEO_PATH = \"../../demo/lunge_demo.mp4\"\n"
-   ]
+    "VIDEO_PATH = \"../../demo/lunge_demo.mp4\"\n",
+    "VIDEO_PATH = 0\n"
+   ],
+   "outputs": [],
+   "execution_count": 8
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-12T03:36:55.680336Z",
+     "start_time": "2024-09-12T03:36:55.626093Z"
+    }
+   },
    "source": [
     "with open(\"./model/input_scaler.pkl\", \"rb\") as f:\n",
     "    input_scaler = pickle.load(f)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -290,9 +316,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-12T03:37:31.513041Z",
+     "start_time": "2024-09-12T03:37:31.507901Z"
+    }
+   },
    "source": [
     "# Load model\n",
     "with open(\"./model/sklearn/stage_SVC_model.pkl\", \"rb\") as f:\n",
@@ -300,21 +329,18 @@
     "\n",
     "with open(\"./model/sklearn/err_LR_model.pkl\", \"rb\") as f:\n",
     "    err_sklearn_model = pickle.load(f)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 9
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO: Created TensorFlow Lite XNNPACK delegate for CPU.\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-12T03:37:38.640439Z",
+     "start_time": "2024-09-12T03:37:33.349937Z"
     }
-   ],
+   },
    "source": [
     "cap = cv2.VideoCapture(VIDEO_PATH)\n",
     "current_stage = \"\"\n",
@@ -424,7 +450,17 @@
     "    for i in range (1, 5):\n",
     "        cv2.waitKey(1)\n",
     "  "
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-09-11 22:37:33.661 python[41149:24727037] WARNING: AVCaptureDeviceTypeExternal is deprecated for Continuity Cameras. Please use AVCaptureDeviceTypeContinuityCamera and add NSCameraUseContinuityCameraDeviceType to your Info.plist.\n"
+     ]
+    }
+   ],
+   "execution_count": 10
   },
   {
    "cell_type": "markdown",
@@ -435,49 +471,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-07-13 08:33:52.012812: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:305] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
-      "2023-07-13 08:33:52.012924: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:271] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Metal device set to: Apple M1\n",
-      "\n",
-      "systemMemory: 16.00 GB\n",
-      "maxCacheSize: 5.33 GB\n",
-      "\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-12T03:37:48.907811Z",
+     "start_time": "2024-09-12T03:37:45.737237Z"
     }
-   ],
+   },
    "source": [
     "# Load model\n",
     "with open(\"./model/dp/err_lunge_dp.pkl\", \"rb\") as f:\n",
     "    err_deep_learning_model = pickle.load(f)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 11
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-07-13 08:34:20.840652: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n",
-      "2023-07-13 08:34:20.877485: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:113] Plugin optimizer for device_type GPU is enabled.\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-12T03:38:08.930423Z",
+     "start_time": "2024-09-12T03:37:58.310103Z"
     }
-   ],
+   },
    "source": [
     "cap = cv2.VideoCapture(VIDEO_PATH)\n",
     "current_stage = \"\"\n",
@@ -586,10 +601,11 @@
     "    cv2.destroyAllWindows()\n",
     "\n",
     "    # (Optional)Fix bugs cannot close windows in MacOS (https://stackoverflow.com/questions/6116564/destroywindow-does-not-close-window-on-mac-using-python-and-opencv)\n",
-    "    for i in range (1, 5):\n",
-    "        cv2.waitKey(1)\n",
+    "    cv2.waitKey(1)\n",
     "  "
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 12
   },
   {
    "cell_type": "markdown",
@@ -603,6 +619,13 @@
     "    - Best Sklearn model: LR\n",
     "    - Both models are correct most of the time"
    ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": ""
   }
  ],
  "metadata": {
